[package]
name = "calendar-puzzle"
version = "0.1.0"
edition = "2021"

[lib]
name = "calendar_puzzle_solver"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
lazy_static = "1.4.0"
num-traits = "0.2"
rayon = "1.7.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false

[profile.release]
debug = true

